web-app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: react-webapp
        image: famasboy888/react-webapp:0.0.1.RELEASE
        imagePullPolicy: Always
        ports:
        - containerPort: 80
