data-server_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-server
spec:
  selector:
    app: data-server
    tier: backend
    type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 8080
